[gd_scene load_steps=8 format=2]

[ext_resource path="res://resources/themes/base_theme.tres" type="Theme" id=1]
[ext_resource path="res://resources/fonts/actual/base/font_big_title.tres" type="DynamicFont" id=2]
[ext_resource path="res://ui/menus/shop/stats_container.tscn" type="PackedScene" id=3]
[ext_resource path="res://ui/menus/global/focus_manager.tscn" type="PackedScene" id=4]
[ext_resource path="res://ui/menus/shop/stat_popup.tscn" type="PackedScene" id=5]
[ext_resource path="res://ui/menus/upgrades/rainbow_box_ui.gd" type="Script" id=6]

[sub_resource type="StyleBoxFlat" id=1]
content_margin_left = 5.0
content_margin_right = 5.0
content_margin_top = 5.0
content_margin_bottom = 5.0
bg_color = Color( 0.47451, 0.560784, 0.541176, 1 )

[node name="RainbowBoxUI" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -960.0
margin_top = -540.0
margin_right = 960.0
margin_bottom = 540.0
rect_pivot_offset = Vector2( -312, -488 )
theme = ExtResource( 1 )
script = ExtResource( 6 )

[node name="AttenuateBackground" type="ColorRect" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.686275 )
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.784314 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 32
custom_constants/margin_top = 32
custom_constants/margin_left = 32
custom_constants/margin_bottom = 32
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Content" type="Control" parent="MarginContainer"]
margin_left = 32.0
margin_top = 32.0
margin_right = 1888.0
margin_bottom = 1048.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/Content"]
margin_right = 1856.0
margin_bottom = 1016.0
alignment = 1

[node name="Title" type="Label" parent="MarginContainer/Content/VBoxContainer"]
margin_top = 137.0
margin_right = 1856.0
margin_bottom = 210.0
custom_fonts/font = ExtResource( 2 )
text = "Rainbow Item Select"
align = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/Content/VBoxContainer"]
margin_left = 747.0
margin_top = 214.0
margin_right = 1108.0
margin_bottom = 879.0
size_flags_horizontal = 4
size_flags_vertical = 4
custom_constants/separation = 15
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/Content/VBoxContainer/HBoxContainer2"]
margin_right = 10.0
margin_bottom = 665.0
custom_styles/bg = SubResource( 1 )
follow_focus = true
scroll_horizontal_enabled = false

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/Content/VBoxContainer/HBoxContainer2/ScrollContainer"]
margin_left = 5.0
margin_top = 5.0
margin_right = 5.0
margin_bottom = 5.0
custom_constants/separation = 50

[node name="StatsContainer" parent="MarginContainer/Content/VBoxContainer/HBoxContainer2" instance=ExtResource( 3 )]
margin_left = 25.0
margin_top = 0.0
margin_right = 361.0
margin_bottom = 665.0

[node name="StatPopup" parent="MarginContainer/Content" instance=ExtResource( 5 )]
visible = false
margin_top = 929.0
margin_right = 1856.0
margin_bottom = 929.0

[node name="FocusManager" parent="." instance=ExtResource( 4 )]

[node name="ButtonDelayTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[connection signal="timeout" from="ButtonDelayTimer" to="." method="_on_ButtonDelayTimer_timeout"]
